# models/Prayer.js
@@ -2,7 +2,7 @@ const mongoose = require('mongoose');
 const Schema = mongoose.Schema;
 
 const prayerSchema = new Schema({
-  '_id': String,
+  _id: String,
   fajr: String,
   chorouq: String,
   dhuhr: String,
@@ -11,10 +11,7 @@ const prayerSchema = new Schema({
   ishae: String,
   day: Number,
   month: Number,
-  cityId: {
-    type: Number,
-    ref: 'City'
-  }
+  city: Number
 });
 
 module.exports = mongoose.model('Prayer', prayerSchema);
