# routes/prayer.js
@@ -3,10 +3,10 @@ const Prayer = require('../models/Prayer');
 const { parseDay, timesFromStringtoDate } = require('../utils');
 const { validateGetPrayers } = require('../validation/prayer');
 
-const toDto = (prayer) => {
+const toDto = prayer => {
   let dto = timesFromStringtoDate(prayer);
   dto.day = parseDay(prayer.day, prayer.month);
-  dto.id = prayer.cityId;
+  dto.id = prayer.city;
   return dto;
 };
 router.use('/', async (req, res) => {
@@ -16,7 +16,7 @@ router.use('/', async (req, res) => {
   }
   const filterQuery = {};
 
-  Object.keys(req.query).forEach((key) => {
+  Object.keys(req.query).forEach(key => {
     if (req.query[key]) {
       filterQuery[key] = +req.query[key];
     }
@@ -25,13 +25,12 @@ router.use('/', async (req, res) => {
   let prayers;
   try {
     prayers = await Prayer.find(filterQuery).select('-_id');
-    // .populate('cityId'); //TODO: See why populate is not working anymore
   } catch (ex) {
     return res.status(500).json({ error: ex });
   }
   if (!prayers.length)
     return res.status(400).json({
-      error: 'Nothing found, one of your parameters is invalid',
+      error: 'Nothing found, maybe one of your parameters is invalid'
     });
 
   return res.status(200).json(prayers.map(toDto));
